--- a/supernova.settings.json
+++ b/supernova.settings.json
@@ -8,7 +8,7 @@
         {
             "tokensTheme": "7Sleep Dark",
             "supernovaBrand": "Default",
-            "supernovaTheme": "Dark"
+            "supernovaTheme": "Dark Theme"
         }
     ],
     "settings": {
