--- a/supernova.settings.json
+++ b/supernova.settings.json
@@ -13,8 +13,8 @@
     ],
     "settings": {
         "dryRun": false,
-        "verbose": false,
-        "preciseCopy": false
+        "verbose": true,
+        "preciseCopy": true
     }
 }
 
