--- a/supernova.settings.json
+++ b/supernova.settings.json
@@ -14,7 +14,7 @@
     "settings": {
         "dryRun": true,
         "verbose": true,
-        "preciseCopy": true
+        "preciseCopy": false
     }
 }
 
