--- a/supernova.settings.json
+++ b/supernova.settings.json
@@ -12,7 +12,7 @@
         }
     ],
     "settings": {
-        "dryRun": true,
+        "dryRun": false,
         "verbose": true,
         "preciseCopy": false
     }
