--- a/supernova.settings.json
+++ b/supernova.settings.json
@@ -1,14 +1,25 @@
 {
     "mode": "multi-file",
-    "mapping": [{
-            "tokensTheme": "7Sleep Light",
+    "mapping": [
+        {
+            "tokensTheme": "7Mind Light",
             "supernovaBrand": "Default",
             "supernovaTheme": null
         },
         {
+            "tokensTheme": "7Mind Dark",
+            "supernovaBrand": "Default",
+            "supernovaTheme": "7Mind Dark"
+        },
+        {
+            "tokensTheme": "7Sleep Light",
+            "supernovaBrand": "Default",
+            "supernovaTheme": "7Sleep Light"
+        },
+        {
             "tokensTheme": "7Sleep Dark",
             "supernovaBrand": "Default",
-            "supernovaTheme": "Dark Theme"
+            "supernovaTheme": "7Sleep Dark"
         }
     ],
     "settings": {
